client/src/templates/Challenges/classic/editor.css
.monaco-editor .margin-view-overlays .line-numbers,
.monaco-editor .margin-view-overlays .myLineDecoration + .line-numbers {
  color: var(--primary-color);
}

.monaco-scrollable-element {
  overflow: visible !important;
}

.monaco-editor-background {
  overflow: visible !important;
  contain: none !important;
}

.vs .monaco-scrollable-element > .scrollbar > .slider {
  z-index: 11;
}

/* NVDA skips the textarea in browse mode if there is no size */
textarea.inputarea {
  width: 1px !important;
  height: 1px !important;
}

.editor-container {
  background: var(--editor-background);
}

.breadcrumbs-demo {
  font-size: 16px;
  margin: 0;
  padding: 10px;
}

.editor-upper-jaw,
.editor-lower-jaw {
  padding: 15px 15px 15px 0px;
}

.editor-upper-jaw {
  max-width: unset !important;
}

.action-row-container,
.description-container {
  background-color: var(--secondary-background);
  padding: 1rem;
  border: 2px solid var(--quaternary-background);
  /* the max-width is set to keep the characters in a line at below ~70 to help
  with readability */
  max-width: 600px;
}

.challenge-description-header {
  display: flex;
}

.description-container h1 {
  color: var(--secondary-color);
  font-family: Hack-ZeroSlash, monospace;
  font-size: 1.1rem;
  font-weight: 700;
  line-height: 1.1;
  margin: 0 0 0.6rem;
}

.description-highlighter {
  background-color: var(--secondary-background);
  opacity: 1;
  animation-name: example;
  animation-duration: 2s;
  animation-delay: 0.5s;
}

.action-row-container button[aria-hidden='true'] {
  display: none;
}

@keyframes example {
  from {
    background-color: var(--highlight-background);
  }
  to {
    background-color: var(--secondary-background);
  }
}

#description p:last-child {
  margin: 0px;
}

.myEditableLineDecoration {
  background-color: var(--gray-45);
  width: 15px !important;
  margin-left: 5px !important;
  margin-right: 5px !important;
}

.myEditableLineDecoration.tests-passed {
  background-color: #4caf50;
}

.editable-region {
  background-color: var(--primary-background);
  z-index: -1;
}

/* Unless we increase the z-index the help widget gets obscured by the jaws */
.accessibilityHelpWidget {
  z-index: 1;
}

.test-feedback {
  display: flex;
  padding: 0;
  flex-direction: column;
}

.test-feedback p {
  margin: 0.5rem 0 0;
  font-family: 'Lato', sans-serif;
}

.test-feedback h2 {
  font-size: 1rem;
  line-height: 1.5;
  padding-right: 0.5rem;
  /* using float instead of inline display so screen readers recognize h2 as a block element */
  float: left;
  margin: 0.5em 0 0;
}

.test-feedback h2:after {
  content: ':';
}

.test-feedback svg {
  height: 1.5rem;
  width: auto;
  margin-right: 0.5rem;
  margin-top: 0.6rem;
}

.test-feedback .test-status,
.test-feedback .hint-status {
  margin-top: 1rem;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.test-status-description,
.hint-description {
  display: flex;
  align-items: center;
  width: 100%;
}

.fade-in {
  animation-name: FadeIn;
  animation-duration: 0.5s;
  transition-timing-function: linear;
}

@keyframes FadeIn {
  0% {
    opacity: 0;
  }
  /* keep test feedback contents initially hidden for 200ms*/
  40% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.lower-jaw-icon-bar {
  overflow: hidden;
  display: flex;
  flex-direction: row;
}
.lower-jaw-icon-bar > button {
  line-height: 0;
  margin-right: 10px;
}

.lower-jaw-icon-bar > button:focus {
  outline: 2px solid var(--blue-mid);
}

.lower-jaw-icon-bar > button:last-child {
  margin-right: 0;
}

